# duck_ai

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test.py
duck_ai/: __init__.py  api.py  enums.py  models.py
duck_ai/history/: __inti__.py  history.py  json_history.py
